.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

Plone 4.0 - UNRELEASED
----------------------

- Moved all migrations and migration tests out to a new package called
  plone.app.upgrade.
  [hannosch]

- Removed module alias for the ploneview formerly named plone.
  [hannosch]

- Removed the interface tool and some unused functions from the PloneTool.
  [hannosch]

- Removed deprecated code. Our deprecation policy allows us to deprecate in
  the 3.x line and remove in 4.0.
  [hannosch]

- Refactored the special NotFound error handling into an exception view.
  [hannosch]

- Clarified content language versus response language handling.
  [hannosch]

- Removed persistent control panel tool. The control panel section is based
  on normal actions, stored in the actions tool.
  [hannosch]

- Removed unmaintained and unused Favorite content type.
  [hannosch]

- Removed controlpanel.xml files and related migrations. The new controlpanel
  overview is backed by normal actions from the actions tool.
  [hannosch]

- Removed the plone_control_panel template, which is superseded by a view
  in plone.app.controlpanel.
  [hannosch]

- Removed the graphviz-based reference visualization from standard content
  types, since Archetypes has stopped supporting it.
  [hannosch]

- Removed our own home-grown dependency checking code.
  [hannosch]

- Exposed option to honour exclude from navigation even in subfolders from
  navtree_preferences.  Request from theming sprinter at ploneconf2008.
  [MatthewWilkes]

- Removed unmaintained wicked. See PLIP #8593 at
  http://dev.plone.org/plone/ticket/8593.
  [hannosch]

- Removed long unmaintained external editor support. See PLIP #8592 at
  http://dev.plone.org/plone/ticket/8592.
  [hannosch]

- Fixed missing define for portal in the prefs_user_memberships template.