@@ -14,7 +14,6 @@ MetadataTool = 'Plone Metadata Tool'
 SyndicationTool = 'Plone Syndication Tool'
 UtilsTool = 'Plone Utility Tool'
 FactoryTool = 'Plone Factory Tool'
-MigrationTool = 'Plone Migration Tool'
 CalendarTool = 'Plone Calendar Tool'
 ActionIconsTool = 'Plone Action Icons Tool'
 QuickInstallerTool = 'Plone QuickInstaller Tool'
