@@ -62,23 +62,6 @@ class TestPortalCreation(PloneTestCase.PloneTestCase, WarningInterceptor):
     def beforeTearDown(self):
         self._free_warning_output()
 
-    def testInstanceVersion(self):
-        # Test if the version of the instance has been set
-        mt = getToolByName(self.portal, 'portal_migration')
-        self.assertEqual(mt._version, False)
-
-    def testProfileVersion(self):
-        # The profile version for the base profile should be the same
-        # as the file system version and the instance version
-        mt = getToolByName(self.portal, 'portal_migration')
-        setup = getToolByName(self.portal, 'portal_setup')
-
-        version = setup.getVersionForProfile(_DEFAULT_PROFILE)
-        instance = mt.getInstanceVersion()
-        fsversion = mt.getFileSystemVersion()
-        self.assertEqual(instance, fsversion)
-        self.assertEqual(instance, version)
-
     def testPloneSkins(self):
         # Plone skins should have been set up
         self.failUnless(hasattr(self.folder, 'plone_powered.gif'))
